--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -5,10 +5,19 @@ jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-java@v1
+      - name: Checkout Project
+        uses: actions/checkout@v4
+      - name: Set up JDK 21
+        uses: actions/setup-java@v4
         with:
-          java-version: '11'
-      - run: javac -version
-      - run: java -version
+          java-version: '21'
+          architecture: x64
+      - name: Java Compiler Version 
+        run: javac -version
+      - name: Java Runner Version check
+        run: java -version
+      - name: Maven version check
+        run: mvn --version
+
+      
 
