--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -13,6 +13,14 @@ jobs:
           java-version: '21'
           architecture: x64
           distribution: 'temurin'
+          cache: 'maven'
+      - name: Cache local Maven repository
+        uses: actions/cache@v3
+        with:
+          path: ~/.m2/repository
+          key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
+          restore-keys: |
+              ${{ runner.os }}-maven-
       - name: Java Compiler Version 
         run: javac -version
       - name: Java Runner Version check
