Add and Test Caching 2

--- a/.github/workflows/run-action.yml
+++ b/.github/workflows/run-action.yml
@@ -1,5 +1,5 @@
 name: run-action
-run-name: ${{ github.actor }} is running GitHub Actions
+run-name: ${{ github.actor }} is running GitHub Action
 on:
   workflow_run:
     workflows:
