--- a/.github/workflows/run-action.yml
+++ b/.github/workflows/run-action.yml
@@ -7,7 +7,7 @@ on:
     types:
       - completed
 jobs:
-  build-and-test:
+  build-and-run:
     runs-on: ubuntu-latest
     timeout-minutes: 1
     steps:
