--- a/.github/workflows/run-action.yml
+++ b/.github/workflows/run-action.yml
@@ -27,7 +27,9 @@ jobs:
           key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
           restore-keys: |
               ${{ runner.os }}-maven-
-      - name: Spring Boot Run 
-        run: mvn clean install spring-boot:run
+      - name: Package
+        run: mvn clean install 
+      - name: Run
+        run: docker build --build-arg JAR_FILE=target/*.jar -t org/home/project . && docker run -p 8080:8080 org/home/project
 
 
